Change redirect URL to a YouTube link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     // Redireciona após 1 segundo
     setTimeout(() => {
-      window.location.href = 'https://priston.com.br';
+      window.location.href = 'https://youtu.be/THg6JU2Vnl4?si=ZUxE2NOGF4urvL2h';
     }, 1000);
   </script>
 </body>
